--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint --ext .js,.jsx src",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,11 +18,10 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
     "@vitejs/plugin-react": "^4.5.2",
-    "eslint": "^9.29.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
     "vite": "^7.0.0"
   }
