feat: Added prettier to ESLint and added more scripts to package.json

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint --ext .js,.jsx src",
-    "preview": "vite preview"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -20,9 +21,13 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
+    "prettier": "^3.6.2",
     "vite": "^7.0.0"
   }
 }
