--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^30.0.4",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
+    "redux-mock-store": "^1.5.5",
     "vite": "^7.0.0",
     "vitest": "^3.2.4"
   }
